tests/macros/plugin/validate.rs
fn main() {
    let q = discourse::questions![Plugin { validate: todo!() }];
}
